Add a runner for oms-core Update the README